# DevOpsAPI

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  releases.md  setup.cfg  tox.ini
.github/workflows/: release.yml  static.yml
DevOpsAPI/: __init__.py  api.py  base.py  connection.py  projects.py  testing.py  wi.py
DevOpsApi/: __init__.py  api.py  wi.py
di/: api.py  connection.py
docs/: index.md  quickstart.md
docs/usage/: authentication.md  index.md  query.md
etc/: requirements.txt
tests/: conftest.py  project.py  test_testcase.py  test_workitems.py  testcase.py  testrun.py  workitems.py
